stoat/src/snapshots/tui/stoat__test_harness__snapshot_move_down_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: j
focused: #1 of 1
mode: normal
size: 20x6
---
[0m[36m┌──────────────────┐[0m
[0m[36m│abc[0m               [0m[36m│[0m
[0m[36m│def[0m               [0m[36m│[0m
[0m[36m│[0m[7m[36mg[0m[36mhi[0m               [0m[36m│[0m
[0m[36m│[0m                  [0m[36m│[0m
[0m[36m└──────────────────┘[0m
