stoat/src/snapshots/tui/stoat__test_harness__snapshot_move_right.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: l
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[97mhel[0m[7m[97ml[0m[97mo world[0m



[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100ms.txt     1:4 [0m
