stoat/src/snapshots/tui/stoat__test_harness__snapshot_multi_cursor_move_right.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: l
focused: #1 of 1
mode: normal
size: 20x6
---
[0m[97mab[0m[7m[97mc[0m
[0m[97mde[0m[7m[97mf[0m
[0m[97mghi[0m


[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100ms.tx[0m
