stoat/src/snapshots/tui/stoat__test_harness__snapshot_multi_cursor_move_right_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: l
focused: #1 of 1
mode: normal
size: 20x6
---
[0m[36m┌──────────────────┐[0m
[0m[36m│ab[0m[7m[36mc[0m               [0m[36m│[0m
[0m[36m│de[0m[7m[36mf[0m               [0m[36m│[0m
[0m[36m│ghi[0m               [0m[36m│[0m
[0m[36m│[0m                  [0m[36m│[0m
[0m[36m└──────────────────┘[0m
