stoat/src/snapshots/tui/stoat__test_harness__snapshot_open_markdown_file_highlights.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[1m[7m[96m#[0m[1m[96m Title[0m

[0m[97mbody[0m


[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100msample.md           1:1 [0m
