stoat/src/snapshots/tui/stoat__test_harness__snapshot_open_rust_file_nested_captures.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[1m[7m[34mf[0m[1m[34mn[0m[97m [0m[33mmain[0m[37m()[0m[97m [0m[37m{[0m[97m [0m[32m"a[0m[1m[92m\n[0m[32mb"[0m[37m;[0m[97m [0m[37m}[0m




[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100mnested.rs           1:1 [0m
